gitops/pocketbase/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocketbase-name
spec:
  serviceName: pocketbase-name
  replicas: 1
  selector:
    matchLabels:
      app: pocketbase-name
  template:
    metadata:
      labels:
        app: pocketbase-name
    spec:
      containers:
      - name: pocketbase
        image: ghcr.io/muchobien/pocketbase:0.22.7
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: pb-data
          mountPath: "/pb/pb_data"
        - name: pb-public
          mountPath: "/pb/pb_public"
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8090
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 5
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 256Mi
      volumes:
      - name: pb-data
        persistentVolumeClaim:
          claimName: pocketbase-data-name
      - name: pb-public
        persistentVolumeClaim:
          claimName: pocketbase-public-name
