gitops/pocketbase/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketbase-name
spec:
  selector:
    app: pocketbase-name
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
